# speech

./: .gitignore  README.md  buf.yaml  build.sh  client.py  main.py  meta.json  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/workflows/: deploy.yml
src/: __main__.py
src/discovery/: __init__.py  discovery.py
src/proto/: speech.proto  speech_grpc.py  speech_pb2.py  speech_pb2.pyi
src/speech/: __init__.py  api.py  fuzzy_matcher.py  speechio.py
src/speech/proto/: speech.proto  speech_grpc.py  speech_pb2.py  speech_pb2.pyi
src/speech/sr_pipeline/: __init__.py  demo.py  energy_vad.py  pipeline.py  stress_test.py  types.py
