[project]
name = "speech"
version = "0.0.6"
authors = [
  { name="Matt Vella", email="mcvella@gmail.com" },
]
description = "Viam modular service that provides TTS, STT, and AI completion capabilities"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/viam-labs/speech"
